# RCCF-PEP

./: .gitmodules  README.md
ArduRover Stuff/: README.md
ROS/: README.md
ROS/adnav-ros2/: .gitignore
ROS/adnav-ros2/adnav_driver/src/: adnav_driver.cpp
ROS/tidebreaker/: package.xml  setup.cfg  setup.py
ROS/tidebreaker/launch/: send_gps_to_ardupilot.launch.py  system.launch.py
ROS/tidebreaker/tidebreaker/: send_gps_to_ardupilot.py
ROS/tidebreaker_gui/: ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  README.md  config.yaml  package.xml  setup.cfg  setup.py
ROS/tidebreaker_gui/launch/: tidebreaker_gui.launch.py
ROS/tidebreaker_gui/resource/: tidebreaker_gui
ROS/tidebreaker_gui/tidebreaker_gui/: __init__.py  data_manager.py  main.py
ROS/tidebreaker_gui/tidebreaker_gui/ui/: CUSTOM_COMPONENT_TEMPLATE.py  __init__.py  flight_controller_panel.py  main_window.py  map_widget.py  sidebar.py  vesc_panel.py
ROS/transport_drivers/io_context/: CMakeLists.txt
ROS/transport_drivers/serial_driver/: CMakeLists.txt
ROS/transport_drivers/udp_driver/: CMakeLists.txt
ROS/vesc/vesc/: CMakeLists.txt  package.xml
ROS/vesc/vesc_ackermann/: CMakeLists.txt  package.xml
ROS/vesc/vesc_driver/: CMakeLists.txt  package.xml
ROS/vesc/vesc_msgs/: CMakeLists.txt  package.xml
