<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tidebreaker</name>
    <version>0.0.0</version>
    <description>Vehicle operations and supervisor</description>
    <maintainer email="junkmbfl10000@gmail.com">Matthew Barrs</maintainer>
    <license>MIT</license>

    <depend>rclpy</depend>

    <exec_depend>ros2launch</exec_depend>

    <exec_depend>rosbag2_storage_mcap</exec_depend>
    <exec_depend>rmw_cyclonedds_cpp</exec_depend>
    <exec_depend>rosboard</exec_depend>


    <!-- Messages -->

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
